fix width and z-index of outgoing call box

--- a/app/assets/stylesheets/calls.scss
+++ b/app/assets/stylesheets/calls.scss
@@ -1,5 +1,13 @@
+.invitation-form-holder {
+
+}
+#init-chat-button {
+
+}
 .call-box {
+  position: absolute;
   min-width: 12em;
+  max-width: 14em;
   background: white;
   border-radius: 6px;
   box-shadow: 4px 2px 2px #777;
